--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           cache: pip
+          cache-dependency-path: |
+            requirements-dev.txt
       - name: "Install dependencies"
         run: |
           python -m pip install --upgrade pip==23.1.0
