--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -7,6 +7,8 @@ name: 'dbt_gcp_billing'
 version: '0.1.0'
 config-version: 2
 
+require-dbt-version: [">=1.0.0", "<2.0.0"]
+
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
 # found in the "models/" directory. You probably won't need to change these!
