--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,10 +1,9 @@
-
 ---
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'dbt_gcp_billing'
-version: '0.1.0'
+name: "dbt_gcp_billing"
+version: "0.1.0"
 config-version: 2
 
 require-dbt-version: [">=1.0.0", "<2.0.0"]
@@ -19,10 +18,9 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-clean-targets:         # directories to be removed by `dbt clean`
+clean-targets: # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
-
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
