--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -1,13 +1,12 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'integration_tests'
-version: '0.1.0'
+name: "integration_tests"
+version: "0.1.0"
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'integration_tests'
+profile: "integration_tests"
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -19,10 +18,13 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-clean-targets:         # directories to be removed by `dbt clean`
+clean-targets: # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
+flags:
+  send_anonymous_usage_stats: false
+  use_colors: true
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
