--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
-  "json.schemas": [
-    {
-      "fileMatch": ["dbt_project.yml"],
-      "url": "https://raw.githubusercontent.com/dbt-labs/dbt-jsonschema/refs/heads/main/schemas/dbt_project.json"
+  "yaml.schemas": {
+      "https://raw.githubusercontent.com/dbt-labs/dbt-jsonschema/refs/heads/main/schemas/dbt_project.json": [
+        "dbt_project.yml",
+        "**/dbt_project.yml"
+      ],
+      "https://raw.githubusercontent.com/dbt-labs/dbt-jsonschema/refs/heads/main/schemas/dbt_yml_files.json": [
+        "models/**/*.yml",
+        "integration_tests/models/**/*.yml"
+      ]
     }
-  ]
 }
